--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,13 +4,19 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Server",
+            "request": "launch",
+            "mainClass": "Server",
+            "projectName": "EndOfYearProject2021_aa52407d"
+        },
         {
             "type": "java",
             "name": "Launch Current File",
             "request": "launch",
             "mainClass": "${file}",
-            "vmArgs": "--module-path \"/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2/lib\" --add-modules javafx.controls,javafx.fxml"
-        },
+            "vmArgs": "--module-path \"C:\\javafx-sdk-11.0.2\\lib\" --add-modules javafx.controls,javafx.fxml"
+        }
     ]
 }
