--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,7 +37,8 @@
             "name": "Launch Current File",
             "request": "launch",
             "mainClass": "${file}",
-            "vmArgs": "--module-path \"/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2\" --add-modules javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path \"/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2\" --add-modules javafx.controls,javafx.fxml",
+            "vmArgs": "--module-path \"C:\\javafx-sdk-11.0.2\\lib\" --add-modules javafx.controls,javafx.fxml"
         }
     ]
 }
