--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,14 @@
         "c:\\javafx-sdk-11.0.2\\lib\\javafx.media.jar",
         "c:\\javafx-sdk-11.0.2\\lib\\javafx.swing.jar",
         "c:\\javafx-sdk-11.0.2\\lib\\javafx.web.jar",
-        "c:\\javafx-sdk-11.0.2\\lib\\javafx-swt.jar"
+        "c:\\javafx-sdk-11.0.2\\lib\\javafx-swt.jar",
+        "/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2/lib/javafx-swt.jar",
+        "/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2/lib/javafx.base.jar",
+        "/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2/lib/javafx.controls.jar",
+        "/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2/lib/javafx.fxml.jar",
+        "/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2/lib/javafx.graphics.jar",
+        "/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2/lib/javafx.media.jar",
+        "/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2/lib/javafx.swing.jar",
+        "/Users/aparnarenjithpillai/Desktop/Java/javafx-sdk-11.0.2/lib/javafx.web.jar"
     ]
 }
